# manifold-modeling

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
gmmzoo/: core.py  som.py  utils.py
manifold-modeling/: core.py  utils.py
manifoldmodeling/: core.py  utils.py
tests/: test_utils.py
tutorials/: cp_iris.py
